flux/apps/int/ottrbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ottrbox
  labels:
    app.kubernetes.io/name: ottrbox
    app.kubernetes.io/instance: ottrbox
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ottrbox
      app.kubernetes.io/instance: ottrbox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ottrbox
        app.kubernetes.io/instance: ottrbox
    spec:
      containers:
        - name: ottrbox
          image: ghcr.io/aottr/ottrbox:v1.15.0
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /opt/app/backend/data
            - name: config
              mountPath: /opt/app/config.yaml
              subPath: config.yaml
              readOnly: true
          resources:
            limits:
              cpu: 200m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ottrbox-data-pvc
        - name: config
          configMap:
            name: ottrbox-configmap
