flux/apps/int/ottrbox/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ottrbox-svc
  labels:
    app.kubernetes.io/name: ottrbox
    app.kubernetes.io/instance: ottrbox
spec:
  selector:
    app.kubernetes.io/name: ottrbox
    app.kubernetes.io/instance: ottrbox
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
